@@ -82,6 +82,7 @@ Fixes
   * Fixed NCDFWriter wrote velocities instead of forces if
     convert_units=False was set: now correctly writes forces (PR #1113)
   * Fixed warn about missing cython package in dev builds
+  * Fix align.rotation_matrix checks array shape equality (Issue #1152)
 
 Changes
   * Started unifying the API of analysis classes (named internally
